--- a/doc/latex/dc/d49/shellbuiltins_8c.tex
+++ b/doc/latex/dc/d49/shellbuiltins_8c.tex
@@ -7,3 +7,22 @@
 {\ttfamily \#include "{}errno.\+h"{}}\newline
 {\ttfamily \#include "{}pennos.\+h"{}}\newline
 {\ttfamily \#include "{}sys\+\_\+call.\+h"{}}\newline
+\doxysubsubsection*{Functions}
+\begin{DoxyCompactItemize}
+\item 
+void \texorpdfstring{$\ast$}{*} \mbox{\hyperlink{shellbuiltins_8c_a184a1be3455442bda9bbd0789e438481}{b\+\_\+logout}} (void \texorpdfstring{$\ast$}{*}arg)
+\begin{DoxyCompactList}\small\item\em Exits the shell and shutsdown Penn\+OS. \end{DoxyCompactList}\end{DoxyCompactItemize}
+
+
+\doxysubsection{Function Documentation}
+\Hypertarget{shellbuiltins_8c_a184a1be3455442bda9bbd0789e438481}\label{shellbuiltins_8c_a184a1be3455442bda9bbd0789e438481} 
+\index{shellbuiltins.c@{shellbuiltins.c}!b\_logout@{b\_logout}}
+\index{b\_logout@{b\_logout}!shellbuiltins.c@{shellbuiltins.c}}
+\doxysubsubsection{\texorpdfstring{b\_logout()}{b\_logout()}}
+{\footnotesize\ttfamily void \texorpdfstring{$\ast$}{*} b\+\_\+logout (\begin{DoxyParamCaption}\item[{void \texorpdfstring{$\ast$}{*}}]{arg }\end{DoxyParamCaption})}
+
+
+
+Exits the shell and shutsdown Penn\+OS. 
+
+Example Usage\+: logout 
