--- a/doc/latex/d3/d2d/pennos_8h_source.tex
+++ b/doc/latex/d3/d2d/pennos_8h_source.tex
@@ -13,32 +13,35 @@
 \DoxyCodeLine{00009\ \textcolor{preprocessor}{\#define\ \_DEFAULT\_SOURCE\ 1}}
 \DoxyCodeLine{00010\ \textcolor{preprocessor}{\#endif}}
 \DoxyCodeLine{00011\ }
-\DoxyCodeLine{00012\ \textcolor{preprocessor}{\#ifndef\ PROMPT}}
-\DoxyCodeLine{00013\ \textcolor{preprocessor}{\#define\ PROMPT\ "{}penn-\/os>\ "{}}}
-\DoxyCodeLine{00014\ \textcolor{preprocessor}{\#endif}}
-\DoxyCodeLine{00015\ }
-\DoxyCodeLine{00016\ \textcolor{preprocessor}{\#define\ \_XOPEN\_SOURCE\ 700}}
+\DoxyCodeLine{00012\ \textcolor{preprocessor}{\#undef\ PROMPT}}
+\DoxyCodeLine{00013\ }
+\DoxyCodeLine{00014\ \textcolor{preprocessor}{\#ifndef\ PROMPT}}
+\DoxyCodeLine{00015\ \textcolor{preprocessor}{\#define\ PROMPT\ "{}penn-\/os>\ "{}}}
+\DoxyCodeLine{00016\ \textcolor{preprocessor}{\#endif}}
 \DoxyCodeLine{00017\ }
-\DoxyCodeLine{00018\ \textcolor{preprocessor}{\#ifndef\ MAX\_LEN}}
-\DoxyCodeLine{00019\ \textcolor{preprocessor}{\#define\ MAX\_LEN\ 4096}}
-\DoxyCodeLine{00020\ \textcolor{preprocessor}{\#endif}}
-\DoxyCodeLine{00021\ }
-\DoxyCodeLine{00022\ \textcolor{preprocessor}{\#define\ STDIN\_FILENO\ 0}}
-\DoxyCodeLine{00023\ \textcolor{preprocessor}{\#define\ STDOUT\_FILENO\ 1}}
-\DoxyCodeLine{00024\ \textcolor{preprocessor}{\#define\ STDERR\_FILENO\ 2}}
-\DoxyCodeLine{00025\ }
-\DoxyCodeLine{00026\ \textcolor{preprocessor}{\#include\ <fcntl.h>}}
-\DoxyCodeLine{00027\ \textcolor{preprocessor}{\#include\ <stdio.h>}}
-\DoxyCodeLine{00028\ \textcolor{preprocessor}{\#include\ <stdlib.h>}}
-\DoxyCodeLine{00029\ \textcolor{preprocessor}{\#include\ "{}\mbox{\hyperlink{parser_8h}{parser.h}}"{}}}
-\DoxyCodeLine{00030\ \textcolor{preprocessor}{\#include\ "{}\mbox{\hyperlink{pennfat_8h}{pennfat.h}}"{}}}
-\DoxyCodeLine{00031\ \textcolor{preprocessor}{\#include\ "{}\mbox{\hyperlink{globals_8h}{util/globals.h}}"{}}}
-\DoxyCodeLine{00032\ \textcolor{preprocessor}{\#include\ "{}\mbox{\hyperlink{kernel_8h}{util/kernel.h}}"{}}}
-\DoxyCodeLine{00033\ \textcolor{preprocessor}{\#include\ "{}\mbox{\hyperlink{shellbuiltins_8h}{util/shellbuiltins.h}}"{}}}
-\DoxyCodeLine{00034\ \textcolor{preprocessor}{\#include\ "{}\mbox{\hyperlink{sys__call_8h}{util/sys\_call.h}}"{}}}
-\DoxyCodeLine{00035\ }
-\DoxyCodeLine{00036\ \textcolor{keywordtype}{void}*\ \mbox{\hyperlink{pennos_8h_ae8407b38c34512de0d26e126cd7ada44}{function\_from\_string}}(\textcolor{keywordtype}{char}*\ program);}
+\DoxyCodeLine{00018\ \textcolor{preprocessor}{\#define\ \_XOPEN\_SOURCE\ 700}}
+\DoxyCodeLine{00019\ }
+\DoxyCodeLine{00020\ \textcolor{preprocessor}{\#ifndef\ MAX\_LEN}}
+\DoxyCodeLine{00021\ \textcolor{preprocessor}{\#define\ MAX\_LEN\ 4096}}
+\DoxyCodeLine{00022\ \textcolor{preprocessor}{\#endif}}
+\DoxyCodeLine{00023\ }
+\DoxyCodeLine{00024\ \textcolor{preprocessor}{\#define\ STDIN\_FILENO\ 0}}
+\DoxyCodeLine{00025\ \textcolor{preprocessor}{\#define\ STDOUT\_FILENO\ 1}}
+\DoxyCodeLine{00026\ \textcolor{preprocessor}{\#define\ STDERR\_FILENO\ 2}}
+\DoxyCodeLine{00027\ }
+\DoxyCodeLine{00028\ \textcolor{preprocessor}{\#include\ <fcntl.h>}}
+\DoxyCodeLine{00029\ \textcolor{preprocessor}{\#include\ <stdio.h>}}
+\DoxyCodeLine{00030\ \textcolor{preprocessor}{\#include\ <stdlib.h>}}
+\DoxyCodeLine{00031\ \textcolor{preprocessor}{\#include\ "{}\mbox{\hyperlink{parser_8h}{parser.h}}"{}}}
+\DoxyCodeLine{00032\ \textcolor{preprocessor}{\#include\ "{}\mbox{\hyperlink{pennfat_8h}{pennfat.h}}"{}}}
+\DoxyCodeLine{00033\ \textcolor{preprocessor}{\#include\ "{}\mbox{\hyperlink{globals_8h}{util/globals.h}}"{}}}
+\DoxyCodeLine{00034\ \textcolor{preprocessor}{\#include\ "{}\mbox{\hyperlink{kernel_8h}{util/kernel.h}}"{}}}
+\DoxyCodeLine{00035\ \textcolor{preprocessor}{\#include\ "{}\mbox{\hyperlink{shellbuiltins_8h}{util/shellbuiltins.h}}"{}}}
+\DoxyCodeLine{00036\ \textcolor{preprocessor}{\#include\ "{}\mbox{\hyperlink{sys__call_8h}{util/sys\_call.h}}"{}}}
 \DoxyCodeLine{00037\ }
-\DoxyCodeLine{00038\ \textcolor{preprocessor}{\#endif}}
+\DoxyCodeLine{00038\ \textcolor{keyword}{static}\ \textcolor{keywordtype}{bool}\ done\ =\ \textcolor{keyword}{false};}
+\DoxyCodeLine{00039\ \textcolor{keywordtype}{void}*\ \mbox{\hyperlink{pennos_8h_ae8407b38c34512de0d26e126cd7ada44}{function\_from\_string}}(\textcolor{keywordtype}{char}*\ program);}
+\DoxyCodeLine{00040\ }
+\DoxyCodeLine{00041\ \textcolor{preprocessor}{\#endif}}
 
 \end{DoxyCode}
